--- a/requirements.txt
+++ b/requirements.txt
@@ -6,56 +6,55 @@
 # *must* ensure the DEB and RPM package maintainers are informed as soon as
 # possible.
 #
+# The packages listed below are sorted alphabetically. It is recommended to add
+# new packages in alphabetical order. However, exceptions can be made to
+# preserve dependency order—please add a comment in such cases and specify the
+# relevant packages.
 ###############################################################################
 
-Flask==3.0.*; python_version <= '3.8'
-Flask==3.1.*; python_version >= '3.9'
+Authlib==1.5.*
+azure-identity==1.21.0
+azure-mgmt-rdbms==10.1.0
+azure-mgmt-resource==23.3.0
+azure-mgmt-subscription==3.1.1
+bcrypt==4.3.*
+boto3==1.38.*
+cryptography==44.0.*
+Flask-Babel==4.0.*
+Flask-Compress==1.*
 Flask-Login==0.*
 Flask-Mail==0.*
 Flask-Migrate==4.*
+Flask-Paranoid==0.*
+Flask-Security-Too==5.4.*; python_version <= '3.9'
+Flask-Security-Too==5.6.*; python_version > '3.9'
+Flask-SocketIO==5.5.*
 Flask-SQLAlchemy==3.1.*
 Flask-WTF==1.2.*
-Flask-Compress==1.*
-Flask-Paranoid==0.*
-Flask-Babel==4.0.*
-Flask-Security-Too==5.5.*; python_version >= '3.10'
-Flask-Security-Too==5.4.*; python_version <= '3.9'
-Flask-SocketIO==5.5.*
-WTForms==3.2.*; python_version >= '3.10'
-WTForms==3.1.*; python_version <= '3.9'
-passlib==1.*
-pytz==2024.*; python_version <= '3.8'
-pytz==2025.*; python_version >= '3.9'
-speaklater3==1.*
-sqlparse==0.*
-psutil==6.1.*
-psycopg[c]==3.2.4
-python-dateutil==2.*
-SQLAlchemy==2.*
-bcrypt==4.2.*
-cryptography==44.0.*
-sshtunnel==0.*
-ldap3==2.*
-gssapi==1.9.*
-user-agents==2.2.0
-pywinpty==2.0.*; sys_platform=="win32"
-Authlib==1.3.*; python_version <= '3.8'
-Authlib==1.4.*; python_version >= '3.9'
-pyotp==2.*
-qrcode==7.*; python_version <= '3.8'
-qrcode[pil]==8.*; python_version >= '3.9'
-boto3==1.36.*
-urllib3==1.26.*
-azure-mgmt-rdbms==10.1.0
-azure-mgmt-resource==23.2.0
-azure-mgmt-subscription==3.1.1
-azure-identity==1.19.0
+Flask==3.1.*
 google-api-python-client==2.*
-google-auth-oauthlib==1.2.1
-keyring==25.*
-Werkzeug==3.0.*; python_version <= '3.8'
-Werkzeug==3.1.*; python_version >= '3.9'
-typer[all]==0.15.*
-setuptools==75.*; python_version >= '3.12'
+google-auth-oauthlib==1.2.2
+gssapi==1.9.*
 jsonformatter~=0.3.4
+keyring==25.*
+ldap3==2.*
 libgravatar==1.0.*
+passlib==1.*
+psutil==7.0.*
+psycopg[c]==3.2.6
+pyotp==2.*
+python-dateutil==2.*
+pytz==2025.*
+pywinpty==2.0.*; sys_platform=="win32"
+qrcode[pil]==8.*; python_version >= '3.9'
+setuptools==80.*; python_version >= '3.12'
+SQLAlchemy==2.*
+sqlparse==0.*
+sshtunnel==0.*
+typer[all]==0.15.*
+urllib3==1.26.*; python_version <= '3.9'
+urllib3==2.4.*;  python_version > '3.9'
+user-agents==2.2.0
+Werkzeug==3.1.*
+WTForms==3.1.*; python_version <= '3.9'
+WTForms==3.2.*; python_version > '3.9'
