--- a/runtime/package.json
+++ b/runtime/package.json
@@ -13,12 +13,12 @@
   "packageManager": "yarn@3.8.7",
   "devDependencies": {
     "electron": "36.2.0",
-    "eslint": "^9.26.0"
+    "eslint": "^9.26.0",
+    "eslint-plugin-unused-imports": "^4.1.4"
   },
   "dependencies": {
     "axios": "^1.9.0",
     "electron-context-menu": "^4.0.5",
-    "electron-dl": "^4.0.0",
-    "electron-store": "^10.0.0"
+    "electron-store": "^10.0.1"
   }
 }
