1) Open the preferences in a tab instead of dialog for better UX. #6743 2) Add a search box to allow searching in the preferences tab. #2864

--- a/web/package.json
+++ b/web/package.json
@@ -81,6 +81,7 @@
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.0",
     "@mui/x-date-pickers": "^8.5.0",
+    "@nozbe/microfuzz": "^1.0.0",
     "@projectstorm/react-diagrams": "^7.0.4",
     "@simonwep/pickr": "^1.5.1",
     "@szhsin/react-menu": "^4.4.1",
@@ -148,6 +149,7 @@
     "sql-formatter": "^15.6.2",
     "uplot": "^1.6.32",
     "uplot-react": "^1.1.4",
+    "use-resize-observer": "^9.1.0",
     "valid-filename": "^4.0.0",
     "vanilla-jsoneditor": "^3.3.1",
     "wkx": "^0.5.0",
