--- a/web/package.json
+++ b/web/package.json
@@ -24,7 +24,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "16.3.0",
     "@testing-library/user-event": "^14.5.2",
-    "@types/jest": "^29.5.4",
+    "@types/jest": "^30.0.0",
     "autoprefixer": "^10.4.21",
     "axios-mock-adapter": "^2.1.0",
     "babel-loader": "^10.0.0",
@@ -34,7 +34,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
-    "eslint": "^9.29.0",
+    "eslint": "^9.30.0",
     "eslint-plugin-jest": "^28.14.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-unused-imports": "^4.1.4",
@@ -46,7 +46,7 @@
     "imagemin-mozjpeg": "^10.0.0",
     "imagemin-optipng": "^8.0.0",
     "imports-loader": "^5.0.0",
-    "jest": "^29.6.4",
+    "jest": "^30.0.2",
     "jest-environment-jsdom": "^29.6.4",
     "loader-utils": "^3.2.1",
     "mini-css-extract-plugin": "^2.9.2",
@@ -61,7 +61,7 @@
     "svgo-loader": "^4.0.0",
     "terser-webpack-plugin": "^5.3.12",
     "typescript": "^5.4.5",
-    "typescript-eslint": "^8.28.0",
+    "typescript-eslint": "^8.35.0",
     "url-loader": "^4.1.1",
     "webfonts-loader": "^8.0.1",
     "webpack": "^5.99.9",
@@ -85,7 +85,7 @@
     "@projectstorm/react-diagrams": "^7.0.4",
     "@simonwep/pickr": "^1.5.1",
     "@szhsin/react-menu": "^4.4.1",
-    "@tanstack/react-query": "5.80.7",
+    "@tanstack/react-query": "^5.81.5",
     "@tanstack/react-table": "^8.16.0",
     "@tanstack/react-virtual": "^3.13.6",
     "@types/classnames": "^2.3.4",
@@ -109,7 +109,7 @@
     "convert-units": "^2.3.4",
     "date-fns": "^4.1.0",
     "diff-arrays-of-objects": "^1.1.8",
-    "hotkeys-js": "^3.13.3",
+    "hotkeys-js": "^3.13.14",
     "html-to-image": "1.11.11",
     "immutability-helper": "^3.0.0",
     "insert-if": "^1.1.0",
@@ -123,7 +123,7 @@
     "notistack": "^3.0.1",
     "papaparse": "^5.5.2",
     "path-fx": "^2.0.0",
-    "postcss": "^8.5.2",
+    "postcss": "^8.5.6",
     "rc-dock": "^3.3.2",
     "react": "^18.2.0",
     "react-arborist": "^3.2.0",
