Fixed an issue where windows installer is not signing tmp files generated by InnoSetup. #8420

--- a/pkg/win32/installer.iss.in
+++ b/pkg/win32/installer.iss.in
@@ -36,6 +36,7 @@ ArchitecturesInstallIn64BitMode={#MyAppArchitecturesMode}
 AllowNoIcons=yes
 WizardImageFile=sidebar.bmp
 MinVersion={#MinimumWindowsVer}
+SignedUninstaller=yes
 
 [Languages]
 Name: "english"; MessagesFile: "compiler:Default.isl"
