Fixed a windows build issue where uninstaller failed to sign. #8420

--- a/pkg/win32/installer.iss.in
+++ b/pkg/win32/installer.iss.in
@@ -36,6 +36,7 @@ ArchitecturesInstallIn64BitMode={#MyAppArchitecturesMode}
 AllowNoIcons=yes
 WizardImageFile=sidebar.bmp
 MinVersion={#MinimumWindowsVer}
+SignTool=signtool
 SignedUninstaller=yes
 
 [Languages]
