Fixed windows signature issue and specify SignTool in installer.iss file instead of calling signtool directly

--- a/pkg/win32/installer.iss.in
+++ b/pkg/win32/installer.iss.in
@@ -36,8 +36,12 @@ ArchitecturesInstallIn64BitMode={#MyAppArchitecturesMode}
 AllowNoIcons=yes
 WizardImageFile=sidebar.bmp
 MinVersion={#MinimumWindowsVer}
-SignTool=signtool
+SignTool=pgAdminSigntool
 SignedUninstaller=yes
+
+[SignTool]
+Name: "pgAdminSigntool"; \
+    Command: "{#GetEnv('PGADMIN_SIGNTOOL_DIR')}\signtool.exe sign /fd certHash /tr http://timestamp.digicert.com /td SHA256 $f"
 
 [Languages]
 Name: "english"; MessagesFile: "compiler:Default.isl"
