--- a/web/package.json
+++ b/web/package.json
@@ -51,7 +51,6 @@
     "process": "^0.11.10",
     "prop-types": "^15.7.2",
     "resize-observer-polyfill": "^1.5.1",
-    "sharp": "^0.34.3",
     "shim-loader": "^1.0.1",
     "style-loader": "^4.0.0",
     "stylis": "^4.3.4",
@@ -66,6 +65,9 @@
     "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^6.0.1",
     "yarn-audit-html": "7.3.2"
+  },
+  "optionalDependencies": {
+    "sharp": "^0.34.3"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.10.4",
