--- a/helm/templates/configmap-serverDefinitions.yaml
+++ b/helm/templates/configmap-serverDefinitions.yaml
@@ -10,5 +10,5 @@ metadata:
   annotations: {{ . | toYaml | nindent 4 }}
   {{- end }}
 data:
-  servers.json: | {{ tpl (dict "Servers" .Values.serverDefinitions.servers | toYaml) . | fromYaml | toPrettyJson | nindent 4 }}
+  servers.json: | {{ tpl (dict "Servers" .Values.serverDefinitions.data | toYaml) . | fromYaml | toPrettyJson | nindent 4 }}
 {{- end }}
