--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -25,7 +25,7 @@ extraDeploy: []
 
 replicas: 1
 
-containerPort: 8080
+containerPort: 5050
 disablePostfix: true
 auth:
   email: admin@pgadmin.org
@@ -38,9 +38,19 @@ extraEnvVars: []
 extraVolumes: []
 extraVolumeMounts: []
 
+config_local:
+  enabled: false
+  existingSecret: ""
+  configKey: config_local.py
+  data: ""
+#  data: |
+#    DEBUG = True
+#    JSON_LOGGER = True
+#    AUTHENTICATION_SOURCES = ['oauth2', 'internal']
+
 serverDefinitions:
   enabled: false
-  servers: {}
+  data: {}
 #   "1":
 #     Name: Minimally Defined Server
 #     Group: Servers
@@ -67,7 +77,7 @@ resources:
     memory: 512Mi
 
 persistence:
-  enabled: false
+  enabled: true
   size: 1Gi
   storageClass: ""
   accessModes: ["ReadWriteOnce"]
