Fixed an issue where shortcuts are not working as expected on multiple keyboard layouts. #9157 Update default shortcut for 'Replace' in editor to avoid using the Option key.

--- a/web/package.json
+++ b/web/package.json
@@ -77,6 +77,7 @@
     "@date-io/core": "^3.0.0",
     "@date-io/date-fns": "3.x",
     "@emotion/sheet": "^1.0.1",
+    "@fluentui/keyboard-key": "^0.4.23",
     "@fortawesome/fontawesome-free": "latest",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
