--- a/.github/workflows/run-python-tests-pg.yml
+++ b/.github/workflows/run-python-tests-pg.yml
@@ -21,7 +21,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [macos-latest, ubuntu-22.04, windows-latest]
-        pgver: [13, 14, 15, 16, 17]
+        pgver: [13, 14, 15, 16, 17, 18]
 
     runs-on: ${{ matrix.os }}
 
