Fixed an issue where query tool shortcut would trigger the callback twice. #9157

--- a/pkg/win32/installer.iss.in
+++ b/pkg/win32/installer.iss.in
@@ -38,6 +38,7 @@ WizardImageFile=sidebar.bmp
 MinVersion={#MinimumWindowsVer}
 SignTool=pgAdminSigntool
 SignedUninstaller=yes
+CloseApplications=yes
 
 [Languages]
 Name: "english"; MessagesFile: "compiler:Default.isl"
