Add conditional TLS support to Ingress in Helm chart

--- a/pkg/helm/templates/ingress.yaml
+++ b/pkg/helm/templates/ingress.yaml
@@ -21,4 +21,10 @@ spec:
               name: http
         path: /
         pathType: Prefix
+  {{- if .Values.ingress.tlsSecret }}
+  tls:
+  - hosts:
+    - {{ tpl .Values.ingress.hostname . }}
+    secretName: {{ .Values.ingress.tlsSecret }}
+  {{- end }}
 {{- end }}
