Add conditional TLS support to Ingress in Helm chart

--- a/pkg/helm/values.yaml
+++ b/pkg/helm/values.yaml
@@ -98,7 +98,8 @@ ingress:
   enabled: false
   hostname: pgadmin4.local
   annotations: {}
-
+  # If set, enables TLS configuration in the Ingress resource.
+  tlsSecret: ""
 startupProbe:
   enabled: false
   httpGet:
