--- a/web/package.json
+++ b/web/package.json
@@ -117,6 +117,7 @@
     "json-bignumber": "^1.0.1",
     "leaflet": "^1.9.4",
     "lodash": "4.*",
+    "marked": "^17.0.1",
     "moment": "^2.29.4",
     "moment-timezone": "^0.6.0",
     "notificar": "^1.0.1",
