--- a/requirements.txt
+++ b/requirements.txt
@@ -50,7 +50,7 @@ python-dateutil==2.*
 pytz==2025.*
 # pinned for https://github.com/andfoy/pywinpty/issues/545
 pywinpty==2.0.*; sys_platform=="win32"
-qrcode[pil]==8.*; python_version >= '3.9'
+qrcode[pil]==8.*
 setuptools==80.*
 SQLAlchemy==2.*
 sqlparse==0.*
