docs(helm): update values.yaml with deployment strategy options Signed-off-by: David Aparicio <david.aparicio@free.fr>

--- a/pkg/helm/values.yaml
+++ b/pkg/helm/values.yaml
@@ -25,6 +25,12 @@ extraDeploy: []
 
 replicas: 1
 
+# strategy:
+#   type: RollingUpdate
+#   rollingUpdate:
+#     maxSurge: 25%
+#     maxUnavailable: 25%
+
 containerPort: 5050
 disablePostfix: true
 enableServiceLinks: false
