--- a/pkg/mac/Info.plist.in
+++ b/pkg/mac/Info.plist.in
@@ -45,8 +45,6 @@
 		<key>SYSTEM_VERSION_COMPAT</key>
 		<string>0</string>
 	</dict>
-	<key>LSFileQuarantineEnabled</key>
-	<true/>
 	<key>LSHasLocalizedDisplayName</key>
 	<string>1</string>
 	<key>LSMinimumSystemVersion</key>
@@ -69,5 +67,7 @@
 	<string>scripting.sdef</string>
 	<key>SCMRevision</key>
 	<string>62f83a7521ae1f32e563795732dff0c9da1b660d-refs/heads/master@{#812354}</string>
+	<key>LSApplicationCategoryType</key>
+    <string>public.app-category.developer-tools</string>
 </dict>
 </plist>
