--- a/web/package.json
+++ b/web/package.json
@@ -109,6 +109,7 @@
     "convert-units": "^2.3.4",
     "date-fns": "^4.1.0",
     "diff-arrays-of-objects": "^1.1.8",
+    "dompurify": "^3.2.4",
     "hotkeys-js": "^4.0.0",
     "html-to-image": "1.11.11",
     "immutability-helper": "^3.0.0",
@@ -117,6 +118,7 @@
     "json-bignumber": "^1.0.1",
     "leaflet": "^1.9.4",
     "lodash": "4.*",
+    "marked": "^17.0.1",
     "moment": "^2.29.4",
     "moment-timezone": "^0.6.0",
     "notificar": "^1.0.1",
